--- a/index.html
+++ b/index.html
@@ -118,21 +118,28 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
               </button>
             </p>
+            <div class="modal-grid">
             <p class="search-item aduls">
               <label for="aduls">Взрослые:</label>
-              <input  class="search-" id="aduls" type="number" name="aduls" min="0" placeholder="2">
+              <span class="aduls-count">
               <button class="button less-button" type="submit">-</button>
+              <input  class="search-" id="aduls" type="text" name="aduls" min="0" placeholder="2">
               <button class="button more-button" type="submit">+</button>
+              </span>
             </p>
             <p class="search-item kids">
               <label for="kids">Дети:</label>
-              <input  class="" id="kids" type="number" name="kids" min="0" placeholder="0">
-              <button class="button less-button" type="submit">-</button>
-              <button class="button more-button" type="submit">+</button>
+              <span class="kids-count">
+              <button class="button less-button less-button-2" type="submit">-</button>
+              <input  class="" id="kids" type="text" name="kids" min="0" placeholder="0">
+              <button class="button more-button more-button-2" type="submit">+</button>
+            </span>
             </p>
+        </div>
             <button class="button find-button" type="submit">Найти</button>
           </form>
         </div>
+
       </section>
       <div class="map-block">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050598901!2d-111.83015806590326!3d34.85437338101261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2sus!4v1536242335279" width="1200" height="474" frameborder="0" style="border:0" allowfullscreen></iframe>
