--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper-inner-page">
-    <header class="main-header">
+    <header class="main-header main-header-2">
       <nav class="site-navigation">
         <a class="main-header-logo" href="index.html">
           <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип город Седона">
@@ -22,7 +22,7 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main class="container container-2">
       <h1 class="visually-hidden">Подбор жилья в Седоне</h1>
       <section class="filters">
         <h2 class="visually-hidden">Фильтр гостиниц</h2>
