--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <div class="wrapper-main-page">
+      <div class="intro">
+      <img src="img/background-index.jpg" width="1200" height="800" alt="фоновая картинка">
+      </div>
+      <div>
     <header class="main-header">
         <nav class="site-navigation">
           <a class="main-header-logo">
@@ -22,7 +26,7 @@
           </ul>
         </nav>
     </header>
-    <main class="container">
+    <main class="container container-2">
       <h1 class="visually-hidden">Sedona</h1>
       <p class="main-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
       <section class="reasons">
@@ -146,8 +150,8 @@
         <img src="img/map.jpg" width="1200" height="473" alt="Как до нас добраться">
       </div>
     </main>
-    <footer class="main-footer container">
-      <p class="footer-hashtag container">#visitsedona</p>
+    <footer class="main-footer container container-2">
+      <p class="footer-hashtag">#visitsedona</p>
       <div class="footer-social container">
         <ul class="social-list">
           <li>
