--- a/catalog.html
+++ b/catalog.html
@@ -33,18 +33,18 @@
             <ul>
               <li class="filter-option-1">
                 <input class="visually-hidden filter-input filter-input-checkbox" id="pool-checkbox" type="checkbox" name="checkbox-indicator" checked>
-                <span class="checkbox-indicator"></span>
+                <label class="checkbox-indicator" for="pool-checkbox"></label>
                 <label class="checked-indicator" for="pool-checkbox">Бассейн</label>
               </li>
               <li class="filter-option-2">
                 <input class="visually-hidden filter-input filter-input-checkbox" id="parking-checkbox" type="checkbox" name="checkbox-indicator">
-                <span class="checkbox-indicator"></span>
+                <label class="checkbox-indicator" for="parking-checkbox"></label>
                 <label class="checked-indicator" for="parking-checkbox">Парковка</label>
               </li>
               <li class="filter-option-3">
-                <input class="visually-hidden filter-input filter-input-checkbox" id="wi-fi-checked" type="checkbox" name="checkbox-indicator">
-                <span class="checkbox-indicator"></span>
-                <label class="checked-indicator" for="wi-fi-checked">Wi-Fi</label>
+                <input class="visually-hidden filter-input filter-input-checkbox" id="wi-fi-checkbox" type="checkbox" name="checkbox-indicator">
+                <label class="checkbox-indicator" for="wi-fi-checkbox"></label>
+                <label class="checked-indicator" for="wi-fi-checkbox">Wi-Fi</label>
               </li>
             </ul>
           </fieldset>
@@ -55,43 +55,38 @@
             <ul>
               <li class="filter-option-1">
                 <input class="visually-hidden filter-input filter-input-checkbox-2" id="hotel-checkbox" type="checkbox" name="checkbox-indicator" checked>
-                <span class="checkbox-indicator"></span>
+                <label class="checkbox-indicator" for="hotel-checkbox"></label>
                 <label class="checked-indicator" for="hotel-checkbox">Гостиница</label>
               </li>
               <li class="filter-option-2">
                 <input class="visually-hidden filter-input filter-input-checkbox-2" id="motel-checkbox" type="checkbox" name="checkbox-indicator" checked>
-                <span class="checkbox-indicator"></span>
+                <label class="checkbox-indicator" for="motel-checkbox"></label>
                 <label class="checked-indicator" for="motel-checkbox">Мотель</label>
               </li>
               <li class="filter-option-3">
                 <input class="visually-hidden filter-input filter-input-checkbox-2" id="apartments-checkbox" type="checkbox" name="checkbox-indicator" checked>
-                <span class="checkbox-indicator"></span>
+                <label class="checkbox-indicator" for="apartments-checkbox"></label>
                 <label class="checked-indicator" for="apartments-checkbox">Апартаменты</label>
               </li>
             </ul>
           </fieldset>
         </div>
         <div class="wrapper">
-           <fieldset class="filter-range">
-            <legend class="filter-range-title">Стомость сутки (р):</legend>
+          <fieldset class="filter-range">
+            <legend class="filter-range-title">Стоимость в сутки (р):</legend>
             <div class="filter-section price-controls">
-             
-                <label for="min-value">От</label>
-                <input id="min-value" type="text" name="min-price" value="0">
-              
-                <label for="max-value">До</label>
-                <input id="max-value" type="text" name="max-prace" value="3000">
+              <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+              <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
             </div>
-             <div class="range-controls">
-               <div class="scale">
-                 <div class="bar"></div>
-               </div>
-               <div class="range-toggle range-toggle-min"></div>
-               <div class="range-toggle range-toggle-max"></div>
-             </div>
-             <button class="btn-transparent" type="submit">Показать</button>
+            <div class="range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+              <div class="range-toggle range-toggle-max"></div>
+            </div>
+            <button class="btn-transparent" type="submit">Показать</button>
           </fieldset>
- 
           </div>
         </form>
       </section>
@@ -194,24 +189,24 @@
         </ul>
       </section>
     </main>
-    <footer class="main-footer container">
-      <p class="footer-hashtag container">#visitsedona</p>
+     <footer class="main-footer container container-2">
+      <p class="footer-hashtag">#visitsedona</p>
       <div class="footer-social container">
         <ul class="social-list">
           <li>
-            <a class="button social-button social-button-1 twitter-button" href="#">
+            <a class="social-button social-button-1 twitter-button" href="#">
               <span class="visually-hidden">Twitter</span>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="15" viewBox="0 0 17 15"><path d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"/></svg>
               </a>
           </li>
           <li>
-            <a class="button social-button social-button-2 facebook-button" href="#">
+            <a class="social-button social-button-2 facebook-button" href="#">
               <span class="visually-hidden">Фейсбук</span>
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
             </a>
           </li>
           <li>
-            <a class="button social-button social-button-3 youtube-button" href="#">
+            <a class="social-button social-button-3 youtube-button" href="#">
               <span class="visually-hidden">Youtube</span>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16"><path d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"/></svg>
             </a>
