--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <div class="intro">
       <img src="img/background-index.jpg" width="1200" height="800" alt="фоновая картинка">
       </div>
-      <div>
     <header class="main-header">
         <nav class="site-navigation">
           <a class="main-header-logo">
@@ -127,7 +126,7 @@
               <label for="aduls">Взрослые:</label>
               <span class="aduls-count">
               <button class="button less-button" type="submit">-</button>
-              <input  class="search-" id="aduls" type="text" name="aduls" min="0" placeholder="2">
+              <input  class="" id="aduls" type="text" name="aduls"  placeholder="2">
               <button class="button more-button" type="submit">+</button>
               </span>
             </p>
@@ -135,7 +134,7 @@
               <label for="kids">Дети:</label>
               <span class="kids-count">
               <button class="button less-button less-button-2" type="submit">-</button>
-              <input  class="" id="kids" type="text" name="kids" min="0" placeholder="0">
+              <input  class="" id="kids" type="text" name="kids"  placeholder="0">
               <button class="button more-button more-button-2" type="submit">+</button>
             </span>
             </p>
@@ -184,7 +183,7 @@
           </a>
       </div>
     </footer>
-      </div>
+    </div>
      <script>
        var link = document.querySelector(".search-button");
        var popup = document.querySelector(".modal-search-form");
