--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
       </section>
       <div class="map-block">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050598901!2d-111.83015806590326!3d34.85437338101261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2sus!4v1536242335279" width="1200" height="474" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050598901!2d-111.83015806590326!3d34.85437338101261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNg!5e0!3m2!1sru!2sus!4v1536242335279" width="1200" height="474"  style="border:0" allowfullscreen></iframe>
         <img src="img/map.jpg" width="1200" height="473" alt="Как до нас добраться">
       </div>
     </main>
